# Rust-Based-Ai-Assistant

./: Cargo.toml  README.md  thefuck.txt
src/: ai.rs  lsp.rs  main.rs  parser.rs
