[package]
name = "ai-code-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2.0"        # Parses Rust code
tower-lsp = "0.19" # LSP for VSCode integration (optional)
